tests/machine/x/pl/bool_chain.out
ERROR: /workspace/mochi/tests/machine/x/pl/bool_chain.pl:2:5: Syntax error: Operand expected, unquoted comma or bar found
ERROR: /workspace/mochi/tests/machine/x/pl/bool_chain.pl:10:8: Syntax error: Operand expected, unquoted comma or bar found

